--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 
     <!-- SCROLLS -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"><!-- load bootstrap -->
+    <link red="icon" type="image/x-icon" href="favicon.ico">
     <style>
         html                    { overflow-y:scroll; }
         body                    { padding-top:50px; }
@@ -16,6 +17,7 @@
     </style>
 
     <!-- SPELLS -->
+
     <script async defer src= "https://maps.googleapis.com/maps/api/js?key=AIzaSyDbdnHZnNMZawEhOMHMWdPNvKU1TFiJE10&callback=initMap" type=”text/javascript”> </script>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script><!-- load jquery -->
