--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
     <script src="js/controllers/main.js"></script> <!-- load up our controller -->
     <script src="js/providers/angular-dark-sky.js"></script>
     <script src="js/services/hists.js"></script> <!-- load our hist service -->
+    <script src="js/services/weather.js"></script>
     <!-- // <script src="https://d3js.org/d3.v4.min.js"></script> -->
     <script src="js/core.js"></script> <!-- load our main application -->
 
@@ -66,12 +67,7 @@
                             <div class="form-group">
                                 <label for="new_address">Address</label>  
                                 <!-- TO CHANGE THE UNITS -->
-<!--                                 <select class="units pull-right">
-                                  <option value="us">˚F, mph</option>
-                                  <option value="si">˚C, m/s</option>
-                                  <option value="ca">˚C, km/h</option>
-                                  <option value="uk2">˚C, mph</option>
-                                </select> -->
+
                                 <input type="text" class="form-control" id="new_address" ng-model="formData.text" required>
                             </div>
                             <!-- Submit button. Note that its tied to createUser() function from addCtrl. Also note ng-disabled logic which prevents early submits.  -->
@@ -101,8 +97,14 @@
             <div class="col-md-4 text-center container-fluid" >
                 <div class="panel panel-default">
                     <!-- Panel Title -->
-                    <div class="panel-heading">
+                    <div class="panel-heading container">
                         <h2 class="panel-title text-center"> {{loc}} </h2>
+                        <select ng-model = "unit" ng-init = "unit='us'"  ng-change = "updateUnit()" class="pull-right">
+                          <option value="us">˚F, mph</option>
+                          <option value="si">˚C, m/s</option>
+                          <option value="ca">˚C, km/h</option>
+                          <option value="uk2">˚C, mph</option>
+                        </select>
                     </div>
                     <!-- Panel Body -->
                     <div class="panel-body">
@@ -122,7 +124,15 @@
             </div>
 
             <!-- Google Map -->
-            <div class = "col-md-4">
+            <div class = "col-md-4 text-center container-fluid">
+               <div class="panel panel-default">
+                   <!-- Panel Body -->
+                   <div class="panel-body">
+                        <div class = "table-responsive table-borderless span12" style = "overflow:scroll; height: 250px; width: 100%">
+                            <table id = "currently-weather-detailed" class = "table"> </table>
+                        </div>
+                   </div>
+               </div>
                 <div id="map" style="width:100%; height:327px"></div>
             </div>
             
