get rid of avg line

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
 
 
 <body ng-controller="mainController">
-    <div class="container">
+    <div class="container" >
         <div class="header">
               <div class="container-fluid">
                 <h3 class="text-muted">Weather Forecast</h3>
@@ -116,7 +116,7 @@
                         </h4>
                     </div>
                     <!-- Panel Body -->
-                    <div class="panel-body container-fluid span12">
+                    <div class="panel-body container-fluid span12" > <!--ng-style="{'background-color':'#ccc'}" -->
                         <!-- Creates Form (novalidate disables HTML validation, Angular will control) -->
                         <div class = "table-responsive table-borderless span12">
                             <table id = "currently-weather" class = "table">
