--- a/public/index.html
+++ b/public/index.html
@@ -118,14 +118,14 @@
                     <!-- Panel Body -->
                     <div class="panel-body container-fluid span12" > <!--ng-style="{'background-color':'#ccc'}" -->
                         <!-- Creates Form (novalidate disables HTML validation, Angular will control) -->
-                        <div class = "table-responsive table-borderless span12">
+                        <div class = "table-borderless span12">
                             <table id = "currently-weather" class = "table">
                              </table>
                         </div>
                         <div class = "table-responsive table-borderless span12" style = "overflow:scroll; width: 100%">
                             <table id = "hourly-weather" class = "table "> </table>
                         </div>
-                        <div class = "table-responsive table-borderless span12" style = "overflow:scroll; width: 100%">
+                        <div class = "table-borderless span12" style = "overflow:scroll; width: 100%">
                             <table id = "currently-weather-detailed" class = "table table-hover"> </table>
                         </div>
               
@@ -139,7 +139,7 @@
                <div class="panel panel-default">
                    <!-- Panel Body -->
                    <div class="panel-body">
-                        <div class = "table-responsive table-borderless span12" style = "overflow:scroll; width: 100%; height: 327px">
+                        <div class = "table-borderless" style = "overflow:scroll; width: 100%; height: 327px">
                             <table id = "daily-weather" class = "table table-hover"> </table>
                         </div> 
                         <br>  
