add history feature

--- a/public/index.html
+++ b/public/index.html
@@ -137,6 +137,10 @@
             <!-- Google Map -->
             <div class = "col-md-4 text-center container-fluid">
                <div class="panel panel-default">
+                    <div class="panel-heading container">
+                        <h5 class="text-center"> <b> Week Forecast </b>
+                        </h5>
+                    </div>
                    <!-- Panel Body -->
                    <div class="panel-body">
                         <div class = "table-borderless" style = "overflow:scroll; width: 100%; height: 327px">
