--- a/public/index.html
+++ b/public/index.html
@@ -122,7 +122,7 @@
                             <table id = "currently-weather" class = "table">
                              </table>
                         </div>
-                        <div class = "table-responsive table-borderless span12" style = "overflow:scroll; width: 100%">
+                        <div class = "table-borderless span12" style = "overflow:scroll; width: 100%">
                             <table id = "hourly-weather" class = "table "> </table>
                         </div>
                         <div class = "table-borderless span12" style = "overflow:scroll; width: 100%">
@@ -146,7 +146,7 @@
                         <div class = "table-borderless" style = "overflow:scroll; width: 100%; height: 327px">
                             <table id = "daily-weather" class = "table table-hover"> </table>
                         </div> 
-                        <br>  
+                        <hr>  
                         <!-- <line-chart chart-data="histData"></line-chart> -->
                         <div class 'col-md-12' id = "line-chart-view">
                         <link-chart chart-data="histData"></link-chart>
