--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 
     <!-- SPELLS -->
 
-    <script src= "https://maps.googleapis.com/maps/api/js?key=AIzaSyDbdnHZnNMZawEhOMHMWdPNvKU1TFiJE10" type="text/javascript"> </script>
+    <script src= "https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE" type="text/javascript"> </script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script><!-- load jquery -->
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script><!-- load angular -->
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-sanitize.js"></script>
